# YouTubeComments

./: .env.example  README.md  help_classes.py  help_functions.py  html_functions.py  main.py  pyproject.toml  requirements.txt  tone_diagnostics.py  translate_functions.py
examples/: comments_2023-03-02_21-39-00.json  translated_comments.json
tests_speed/: en_overall.py  en_overall_async.py  ru_overall.py  ru_overall_async.py
tests_speed/en_test1/: test_case.py
tests_speed/en_test1_async/: comments_2023-03-03_22-22-14.json  comments_2023-03-03_22-22-15.json  test_case.py
tests_speed/en_test2/: comments_2023-03-03_21-13-54.json  comments_2023-03-03_21-13-55.json  test_case.py
tests_speed/en_test2_async/: comments_2023-03-03_22-23-08.json  comments_2023-03-03_22-23-09.json  test_case.py
tests_speed/en_test3/: comments_2023-03-03_21-16-50.json  test_case.py
tests_speed/en_test3_async/: comments_2023-03-03_22-24-17.json  comments_2023-03-03_22-24-18.json  test_case.py
tests_speed/ru_test1/: comments_2023-03-03_21-21-49.json  comments_2023-03-03_21-21-50.json  test_case.py
tests_speed/ru_test1_async/: comments_2023-03-03_22-26-29.json  test_case.py
tests_speed/ru_test2/: comments_2023-03-03_21-24-24.json  comments_2023-03-03_21-24-25.json  test_case.py
tests_speed/ru_test2_async/: comments_2023-03-03_22-27-50.json  comments_2023-03-03_22-27-51.json  test_case.py
tests_speed/ru_test3/: comments_2023-03-03_21-26-53.json  comments_2023-03-03_21-26-54.json  test_case.py
tests_speed/ru_test3_async/: comments_2023-03-03_22-28-49.json  test_case.py  (+1 more)
